p2.tests bundle cleanup
* Javadoc fixes
* assertThrows usage
* dummy assertion messages removed